/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.mycompany.relacionesej2_extras;

import Servicio.CineServicio;

/**
 *
 * @author hdsot
 */
public class RelacionesEj2_Extras {

    public static void main(String[] args) {
        CineServicio cineServ = new CineServicio();
        //cineServ.cargarCine();
        cineServ.ubicar();
    }
}
